--- a/Application/templates/login.html
+++ b/Application/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static',filename='styles/style.css')}}"
+    <link rel="stylesheet" href="{{url_for('static',filename='styles/style.css')}}">
 </head>
 <body>
     <style>
@@ -10,5 +10,37 @@
             background-image: url({{url_for('static',filename='assets/Background.png')}});
         }   
     </style>
+        <div class="loginContainer">
+
+            <div class="form">
+                <div class="group">
+                    <h1>Login</h1>
+                    <span>
+                        You Ngu
+                    </span>
+                </div>
+                <div class="group">
+                    <i class="fa-regular fa-user"></i>
+                    <input type="text" placeholder=" " id="name" autocomplete="off">
+                    <label for="name">Username...</label>
+                </div>
+                <div class="group">
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" placeholder=" " id="password" autocomplete="off">
+                    <i class="fa-regular fa-eye" onclick="changeTypePassword()"></i>
+                    <i class="fa-regular fa-eye-slash" onclick="changeTypePassword()"></i>
+                    <label for="password">Password...</label>
+                </div>
+                <div class="loginBtn">
+                    <button><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+    
+        </div>
+        <script>
+            function changeTypePassword() {
+                document.getElementById('password').type = document.getElementById('password').type == 'text' ? 'password' : 'text';
+            }
+        </script>
 
 </html>
