--- a/Application/templates/login.html
+++ b/Application/templates/login.html
@@ -16,23 +16,23 @@
                 <div class="group">
                     <h1>Login</h1>
                     <span>
-                        You Ngu
+                        NT219.N22.ATCL
                     </span>
                 </div>
                 <div class="group">
-                    <i class="fa-regular fa-user"></i>
+                    <!-- <i class="fa-regular fa-user"></i> -->
                     <input type="text" placeholder=" " id="name" autocomplete="off">
-                    <label for="name">Username...</label>
+                    <label for="name">Username</label>
                 </div>
                 <div class="group">
-                    <i class="fa-solid fa-lock"></i>
+                    <!-- <i class="fa-solid fa-lock"></i> -->
                     <input type="password" placeholder=" " id="password" autocomplete="off">
                     <i class="fa-regular fa-eye" onclick="changeTypePassword()"></i>
                     <i class="fa-regular fa-eye-slash" onclick="changeTypePassword()"></i>
-                    <label for="password">Password...</label>
+                    <label for="password">Password</label>
                 </div>
                 <div class="loginBtn">
-                    <button><i class="fa-solid fa-arrow-right"></i></button>
+                    <button><i class="fa-solid fa-arrow-right">SUBMIT</i></button>
                 </div>
             </div>
     
