--- a/Application/templates/login.html
+++ b/Application/templates/login.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="sign_up">
                     <scan>
-                        Don't have an account? &nbsp;<a>Sign up</a></p>
+                        Don't have an account? &nbsp;<a href="\register">Sign up</a></p>
                     </scan>
                 </div>
             </div>
