--- a/Application/static/styles/style.css
+++ b/Application/static/styles/style.css
@@ -77,7 +77,7 @@ body {
 .group input {
     background-color: transparent;
     border: none;
-    10 outline: none;
+    outline: none;
 }
 
 .group label {
@@ -129,7 +129,67 @@ body {
     cursor: pointer;
 }
 
+body{        
+    padding-top: 60px;
+    padding-bottom: 40px;
+}
+.container{
+    width: 100%;
+    margin: auto;
+}
+.fixed-header, .fixed-footer{
+    width: 100%;
+    position: fixed;        
+    background: #fffefe;
+    padding: auto 0;
+}
+.fixed-header{
+    top: 0;
+    padding-bottom: 15px;
+}
+.fixed-footer{
+    bottom: 0;
+}  
 
+nav{
+    height: 30px;
+}
+
+nav .menu ul{
+    list-style: none;
+}
+
+nav .menu ul li{
+    float: left;
+    padding: 10px 30px;
+}
+
+nav .menu ul li a{
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: auto;
+}
+
+
+nav .sign-menu ul{
+    list-style: none;
+}
+
+nav .sign-menu ul li{
+    float: right;
+    padding: 10px 30px;
+}
+
+nav .sign-menu ul li a{
+    font-size: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: auto;
+    margin-right: 0px;
+}
+
+.fixed-header logo{
+    position: absolute;
+}
 
 /* .loginBtn::before {
 }
