--- a/Application/static/styles/style.css
+++ b/Application/static/styles/style.css
@@ -1,12 +1,8 @@
 body {
-    min-height: 100vh;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
     font-family: monospace;
-    color: #555;
-    /* background-image: "assets/Background"; */
+    background-image: url('/static/assets/Background.png');
+    background-size: 100% ;
 }
 
 .loginContainer {
@@ -20,6 +16,7 @@ body {
     border-radius: 30px;
     position: relative;
     z-index: 1;
+    margin:50px auto;
 }
 
 .form {
@@ -28,6 +25,7 @@ body {
     margin-top: 20px;
     border-radius: 20px;
     position: relative;
+    
 }
 
 /* .form::before {
@@ -137,60 +135,83 @@ body{
     width: 100%;
     margin: auto;
 }
-.fixed-header, .fixed-footer{
+
+.fix-header{
+    position:relative;
     width: 100%;
-    position: fixed;        
-    background: #fffefe;
-    padding: auto 0;
+    margin:auto;
+    background-color: white;
+    box-shadow:5px 10px 50px #000;
+    transform: translate(0,-80%);
 }
-.fixed-header{
-    top: 0;
-    padding-bottom: 15px;
-}
-.fixed-footer{
-    bottom: 0;
-}  
-
-nav{
-    height: 30px;
+.navbar{
+    margin: 30px auto;
+    display:flex;
+    align-items: center;
 }
 
-nav .menu ul{
+ul{
+    flex:1;
+    text-align: left;
+}
+
+ul li{
+    display: inline-block;
     list-style: none;
+    margin: 0 50px;
 }
 
-nav .menu ul li{
-    float: left;
-    padding: 10px 30px;
-}
-
-nav .menu ul li a{
+ul li a{
+    text-decoration: none;
+    color:#000;
+    padding: 0 10px;
     font-size: 30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: auto;
+    position: relative;
 }
 
-
-nav .sign-menu ul{
-    list-style: none;
-}
-
-nav .sign-menu ul li{
-    float: right;
-    padding: 10px 30px;
-}
-
-nav .sign-menu ul li a{
-    font-size: 30px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: auto;
-    margin-right: 0px;
-}
-
-.fixed-header logo{
+ul li a::after{
+    content: '';
+    width: 0;
+    height: 10px;
+    background: #496ee7;
     position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: -10px;
+    transition: 0.5s;
 }
 
+ul li a:hover::after{
+    width: 100%;
+}
+
+.lrbar{
+    text-align: right;
+}
+
+.registerbtn{
+    color: #a478de;
+}
+
+.homepage-content{
+    width: 100%;
+    text-align: center;
+    position: relative;
+    padding-top: 80px;
+}
+
+.project-name{
+    font-family: 'Oswald', sans-serif;
+    font-size: 80px;
+    color: white;
+
+}
+
+.description{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    color:white;
+}
 /* .loginBtn::before {
 }
 .loginBtn::after {
