--- a/Application/templates/login.html
+++ b/Application/templates/login.html
@@ -3,13 +3,9 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{{url_for('static',filename='styles/style.css')}}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 <body>
-    <style>
-        body{
-            background-image: url({{url_for('static',filename='assets/Background.png')}});
-        }   
-    </style>
         <div class="loginContainer">
 
             <div class="form">
